--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,7 +26,7 @@ body{
         header{
             color: $text_comment;
 
-            #test3 {
+            .runner {
                 white-space: pre-line;
                 color: $text_main;
               }
