--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-color: #1E1E1E;
+  background-color: #FFFFFF;
 }
 
 .main_wrapper {
@@ -36,7 +36,7 @@ body {
   -ms-grid-column-span: 4;
   grid-column: 1/5;
   white-space: pre-line;
-  color: #FFFFFF;
+  color: #1E1E1E;
 }
 
 .main_wrapper .content header .settings {
@@ -52,7 +52,7 @@ body {
   display: none;
   position: absolute;
   width: 60%;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #1E1E1E;
   padding: 10px;
   right: 10%;
   z-index: 1;
@@ -63,9 +63,9 @@ body {
   width: 20%;
   padding-left: auto;
   padding-right: auto;
-  color: #FFFFFF;
-  background-color: #1E1E1E;
-  border: 1px solid #FFFFFF;
+  color: #1E1E1E;
+  background-color: #FFFFFF;
+  border: 1px solid #1E1E1E;
   margin: 0.2em;
 }
 
@@ -74,9 +74,9 @@ body {
   width: 20%;
   padding-left: auto;
   padding-right: auto;
-  color: #FFFFFF;
-  background-color: #1E1E1E;
-  border: 1px solid #FFFFFF;
+  color: #1E1E1E;
+  background-color: #FFFFFF;
+  border: 1px solid #1E1E1E;
   margin: 0.2em;
   color: #FFFFFF;
   background-color: #1E1E1E;
@@ -89,9 +89,9 @@ body {
   width: 20%;
   padding-left: auto;
   padding-right: auto;
-  color: #FFFFFF;
-  background-color: #1E1E1E;
-  border: 1px solid #FFFFFF;
+  color: #1E1E1E;
+  background-color: #FFFFFF;
+  border: 1px solid #1E1E1E;
   margin: 0.2em;
   color: #1E1E1E;
   background-color: #FFFFFF;
@@ -100,7 +100,7 @@ body {
 }
 
 .main_wrapper .content header .settings .dropdown #space {
-  color: #FFFFFF;
+  color: #1E1E1E;
 }
 
 .main_wrapper .content header .settings:hover .dropdown {
@@ -117,7 +117,7 @@ body {
 }
 
 p {
-  color: #FFFFFF;
+  color: #1E1E1E;
   font-family: Consolas, monospace;
   font-size: 1em;
 }
@@ -133,4 +133,4 @@ p {
     margin-top: 0;
   }
 }
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=styles-light.css.map */
