--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,13 +10,34 @@ $text_javadocKeyword: #D9E577;
 
 @mixin set_button{
     height: 2em;
-    width: 20%;
+    //width: 20%;
     padding-left:auto;
     padding-right:auto;
     color: $text_main;
     background-color: $background;
     border: 1px solid $text_main;
     margin: 0.2em;
+    cursor: pointer;
+}
+
+@mixin remove_default_btn{
+    border: none;
+    display: inline-block;
+    text-decoration: none;
+    background-color: $background;
+    color: $text_main;
+    font-size: 1em;
+    text-align: left;
+    padding: 0;
+    cursor: pointer;
+}
+
+@mixin btn_focus{
+    outline: none;  
+}
+
+@mixin btn_active{
+    color: $text_class;
 }
 
 *{
@@ -36,33 +57,39 @@ body{
         grid-row: 2;       
         
         header{
-            display: grid;
-            grid-template-columns: 2fr 2fr 2fr 2fr 1fr 1fr;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
 
             .runner {
-                grid-column: 1/5;
-                white-space: pre-line;
                 color: $text_main;
             }
 
             .settings{
-                grid-column: 6;
+                cursor: pointer;
 
                 img{
                     max-height: 1.4em;
+                    min-width: 1.4em;
                 }
                 
                 .dropdown{
                     display: none;
                     position: absolute;
-                    width: 60%;
                     border: 1px solid $text_main;
-                    padding: 10px;        
-                    right: 10%;            
                     z-index: 1;
 
                     .set_btn{
                         @include set_button();
+                    }
+                    
+                    .set_btn:focus{
+                        @include btn_focus();
+                    }
+
+                    .set_btn:active{
+                        @include btn_active();
+                        border:1px solid $text_class;
                     }
 
                     .set_btn_dark{
@@ -73,6 +100,15 @@ body{
                         border: 1px solid #FFFFFF;
                     }
 
+                    .set_btn_dark:focus{
+                        @include btn_focus();
+                    }
+
+                    .set_btn_dark:active{
+                        @include btn_active();
+                        border:1px solid $text_class;
+                    }
+
                     .set_btn_light{
                         @include set_button();
                         color: #1E1E1E;
@@ -81,16 +117,45 @@ body{
                         border: 1px solid #1E1E1E;
                     }
 
+                    .set_btn_light:focus{
+                        @include btn_focus();
+                    }
+
+                    .set_btn_light:active{
+                        @include btn_active();
+                        border:1px solid $text_class;
+                    }
+
                     #space{
-                        color: $text_main;
+                        height: 1em;
                     }
                 }                
             }
 
             .settings:hover .dropdown{
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 justify-content: space-between;
+            }
+        }
+
+        #menu_div{
+
+            .menu_btn{
+                @include remove_default_btn();
+                margin: 0.5em 0;                
+            }
+
+            .menu_btn:focus{
+                @include btn_focus();
+            }
+
+            .menu_btn:active{
+                @include btn_active();
+            }
+
+            .menu_content{
+                display: none;
             }
         }
     }
@@ -103,14 +168,14 @@ p{
 
 @media screen and(min-width: 641px){
 
-    .dropdown{
-        max-width: 10em;
-    }
+    // .dropdown{
+    //     max-width: 10em;
+    // }
 }
 
 @media screen and(min-width: 1008px){
     
-    .dropdown{
-        margin-top: 0;
-    }
+    // .dropdown{
+    //     margin-top: 0;
+    // }
 }
