--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -142,6 +142,17 @@ body {
           justify-content: space-between;
 }
 
+.main_wrapper .content #menu_div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 1.5em;
+}
+
 .main_wrapper .content #menu_div .menu_btn {
   border: none;
   display: inline-block;
@@ -152,7 +163,7 @@ body {
   text-align: left;
   padding: 0;
   cursor: pointer;
-  margin: 0.5em 0;
+  margin: 0.2em 0;
 }
 
 .main_wrapper .content #menu_div .menu_btn:focus {
