--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -135,10 +135,13 @@ body{
         }
 
         #menu_div{
+            display: flex;
+            flex-direction: column;
+            margin-top: 1.5em;
 
             .menu_btn{
                 @include remove_default_btn();
-                margin: 0.5em 0;                
+                margin: 0.2em 0;                
             }
 
             .menu_btn:focus{
