--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -1,6 +1,6 @@
 $background: #FFFFFF;
 $text_main: #1E1E1E;
-$text_class: #4EC9B0;
+$text_class: #569CD6;
 
 
 @mixin set_button{
@@ -45,9 +45,9 @@ body{
 .main_wrapper{
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-    grid-template-rows: 2em 1.5em 1fr;
+    grid-template-rows: 2rem 2.5rem 2rem 1fr;
 
-    .content{
+    .head_content{
         grid-column: 2/7; 
         grid-row: 2;       
         
@@ -70,9 +70,12 @@ body{
                 
                 .dropdown{
                     display: none;
+                    margin-top: 0.5em;
                     position: absolute;
                     border: 1px solid $text_main;
                     z-index: 1;
+                    right: 10%;
+                    background-color: $background;
 
                     .set_btn{
                         @include set_button();
@@ -133,47 +136,158 @@ body{
                 justify-content: space-between;
             }
         }
+    }
+    #inner_content{
+        grid-column: 2/7; 
+        grid-row: 3;
 
-        #menu_div{
+        #mob_menu{
             display: flex;
-            flex-direction: column;
-            margin-top: 1.5em;
+            flex-direction: row;
+            justify-content: space-between;
 
-            .menu_btn{
-                @include remove_default_btn();
-                margin: 0.2em 0;                
+            .runner {
+                font-size: 1em;
+                color: $text_main;
             }
 
-            .menu_btn:focus{
-                @include btn_focus();
-            }
+            #menu_bar{
+                
+                cursor: pointer;
 
-            .menu_btn:active{
-                @include btn_active();
-            }
+                img{
+                    max-height: 1.4em;
+                    min-width: 1.4em;
+                }
 
-            .menu_content{
-                display: none;
+                .dropdown{
+                    display: none;
+                    margin-top: 0.5em;
+                    position: absolute;
+                    border: 1px solid $text_main;
+                    z-index: 1;
+                    right: 10%;
+                    background-color: $background;
+
+                    .mob_btn{
+                        @include set_button()
+                    }
+
+                    .mob_btn:focus{
+                        @include btn_focus()
+                    }
+
+                    .mob_btn:active{
+                        @include btn_active()
+                    }
+                }
             }
+            #menu_bar:hover .dropdown{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+            }                
         }
     }
+
+    #menu_div{
+        display: none;
+    }
+
+    #main_content{
+        grid-column: 2/7; 
+        grid-row: 4;
+
+        p{
+            font-size: 0.85rem;
+        }
+
+        #main_about{
+            display: none;
+        }
+
+        #main_works{
+            display: none;
+        }
+
+        #main_contact{
+            display: none;
+        }
+    }
+    
 }
 p{
     color: $text_main;
     font-family: Consolas, monospace;
     font-size: 1em;    
 }
-
-@media screen and(min-width: 641px){
-
-    // .dropdown{
-    //     max-width: 10em;
-    // }
+a{
+    color: $text_class;
+    text-decoration: none;
 }
 
-@media screen and(min-width: 1008px){
-    
-    // .dropdown{
-    //     margin-top: 0;
-    // }
+@media screen and (min-width: 641px){
+    .main_wrapper{
+
+        .head_content{
+
+            header{                
+
+                .settings{
+        
+                    .dropdown{
+                        margin-top: 0;
+                    }
+                }                
+            }
+        }
+        #inner_content{
+
+            #mob_menu{
+
+                #menu_bar{
+
+                    .dropdown{
+                        margin-top: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1008px){ 
+    .main_wrapper{
+
+        #inner_content{   
+            
+            #menu_div{
+                columns: 1;
+                display: flex;
+                flex-direction: column;
+                margin-top: 1.5em;
+        
+                .menu_btn{
+                    @include remove_default_btn();
+                    margin: 0.2em 0;                
+                }
+        
+                .menu_btn:focus{
+                    @include btn_focus();
+                }
+        
+                .menu_btn:active{
+                    @include btn_active();
+                }
+        
+                .menu_content{
+                    display: none;
+                }
+            }
+
+            #mob_menu{
+                display: none;
+            }
+        }        
+    }    
 }
