--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-  -ms-grid-rows: 2rem 2.5rem 2rem 1fr;
-      grid-template-rows: 2rem 2.5rem 2rem 1fr;
+  -ms-grid-rows: 2rem 2.5rem 2rem 1fr 1fr;
+      grid-template-rows: 2rem 2.5rem 2rem 1fr 1fr;
 }
 
 .main_wrapper .head_content {
@@ -54,7 +54,6 @@ body {
   display: none;
   margin-top: 0.5em;
   position: absolute;
-  border: 1px solid #FFFFFF;
   z-index: 1;
   right: 10%;
   background-color: #1E1E1E;
@@ -67,7 +66,7 @@ body {
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.2em;
+  margin: 0.4em;
   cursor: pointer;
 }
 
@@ -87,7 +86,7 @@ body {
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.2em;
+  margin: 0.4em;
   cursor: pointer;
   color: #FFFFFF;
   background-color: #1E1E1E;
@@ -111,7 +110,7 @@ body {
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.2em;
+  margin: 0.4em;
   cursor: pointer;
   color: #1E1E1E;
   background-color: #FFFFFF;
@@ -182,9 +181,8 @@ body {
 
 .main_wrapper #inner_content #mob_menu #menu_bar .dropdown {
   display: none;
-  margin-top: 0.5em;
+  margin-top: 0.3em;
   position: absolute;
-  border: 1px solid #FFFFFF;
   z-index: 1;
   right: 10%;
   background-color: #1E1E1E;
@@ -197,7 +195,7 @@ body {
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.2em;
+  margin: 0.4em;
   cursor: pointer;
 }
 
@@ -242,12 +240,30 @@ body {
   display: none;
 }
 
-.main_wrapper #main_content #main_works {
+.main_wrapper #main_content #main_contact {
   display: none;
 }
 
-.main_wrapper #main_content #main_contact {
+.main_wrapper #main_works {
   display: none;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 7;
+  grid-column: 1/8;
+  -ms-grid-row: 4;
+  grid-row: 4;
+}
+
+.main_wrapper #main_works .presentation {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.main_wrapper #main_works #quiz {
+  background-image: url(../img/quiz_screen.JPG);
 }
 
 p {
