--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,7 +16,7 @@ $text_javadocKeyword: #D9E577;
     color: $text_main;
     background-color: $background;
     border: 1px solid $text_main;
-    margin: 0.2em;
+    margin: 0.4em;
     cursor: pointer;
 }
 
@@ -50,7 +50,7 @@ body{
 .main_wrapper{
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-    grid-template-rows: 2rem 2.5rem 2rem 1fr;
+    grid-template-rows: 2rem 2.5rem 2rem 1fr 1fr;
 
     .head_content{
         grid-column: 2/7; 
@@ -77,7 +77,7 @@ body{
                     display: none;
                     margin-top: 0.5em;
                     position: absolute;
-                    border: 1px solid $text_main;
+                    //border: 1px solid $text_main;
                     z-index: 1;
                     right: 10%;
                     background-color: $background;
@@ -167,9 +167,9 @@ body{
 
                 .dropdown{
                     display: none;
-                    margin-top: 0.5em;
+                    margin-top: 0.3em;
                     position: absolute;
-                    border: 1px solid $text_main;
+                    //border: 1px solid $text_main;
                     z-index: 1;
                     right: 10%;
                     background-color: $background;
@@ -209,17 +209,32 @@ body{
 
         #main_about{
             display: none;
-        }
-
-        #main_works{
-            display: none;
-        }
+        }        
 
         #main_contact{
             display: none;
         }
     }
-    
+
+    #main_works{
+        display: none;
+        grid-column: 1/8; 
+        grid-row: 4;
+
+        .presentation{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size:cover;
+        }
+
+        #quiz{
+            background-image: url(../img/quiz_screen.JPG);
+        }
+
+    }
 }
 p{
     color: $text_main;
