--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,5 @@
 $background: #1E1E1E;
+$background_transparent: #1E1E1E7F;
 $text_forground: #D4D4D4;
 $text_main: #FFFFFF;
 $text_class: #4EC9B0;
@@ -8,9 +9,15 @@ $text_variable: #9CDCFE;
 $text_keyword: #569CD6;
 $text_javadocKeyword: #D9E577;
 
+@mixin drop_btn{
+    padding: 0;
+    background: none;
+    cursor: pointer;
+    border:none;
+}
+
 @mixin set_button{
     height: 2em;
-    //width: 20%;
     padding-left:auto;
     padding-right:auto;
     color: $text_main;
@@ -50,7 +57,7 @@ body{
 .main_wrapper{
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-    grid-template-rows: 2rem 2.5rem 2rem 1fr 1fr;
+    grid-template-rows: 2rem 2.5rem 2rem 1fr ;
 
     .head_content{
         grid-column: 2/7; 
@@ -66,20 +73,26 @@ body{
             }
 
             .settings{
-                cursor: pointer;
-
-                img{
-                    max-height: 1.4em;
-                    min-width: 1.4em;
-                }
                 
+                #settings_btn{
+                    @include drop_btn();
+
+                    img{
+                        max-height: 1.5rem;
+                        min-width: 1.5rem;
+                    }
+                }
+
+                #settings_btn:focus{
+                    @include btn_focus();
+                }             
+                                
                 .dropdown{
                     display: none;
                     margin-top: 0.5em;
                     position: absolute;
-                    //border: 1px solid $text_main;
                     z-index: 1;
-                    right: 10%;
+                    right: 9%;
                     background-color: $background;
 
                     .set_btn{
@@ -134,12 +147,6 @@ body{
                     }
                 }                
             }
-
-            .settings:hover .dropdown{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }
         }
     }
     #inner_content{
@@ -158,20 +165,25 @@ body{
 
             #menu_bar{
                 
-                cursor: pointer;
+                #mob_menu_btn{
+                    @include drop_btn();
 
-                img{
-                    max-height: 1.4em;
-                    min-width: 1.4em;
-                }
+                    img{
+                        max-height: 1.5rem;
+                        min-width: 1.5rem;
+                    }
+                }   
+                
+                #mob_menu_btn:focus{
+                    @include btn_focus();
+                }  
 
                 .dropdown{
                     display: none;
                     margin-top: 0.3em;
                     position: absolute;
-                    //border: 1px solid $text_main;
                     z-index: 1;
-                    right: 10%;
+                    right: 9%;
                     background-color: $background;
 
                     .mob_btn{
@@ -186,12 +198,7 @@ body{
                         @include btn_active()
                     }
                 }
-            }
-            #menu_bar:hover .dropdown{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }                
+            }               
         }
     }
 
@@ -228,12 +235,27 @@ body{
             background-position: center;
             background-repeat: no-repeat;
             background-size:cover;
+            
         }
+
+        .transparent{
+            display: grid;
+            grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
+            grid-template-rows: 1rem 1fr;
+            background-color: $background_transparent;
+
+            .pres_text{
+                display: block;
+                grid-column: 2/7;
+                grid-row: 2;            
+            }
+        }
+
+        
 
         #quiz{
             background-image: url(../img/quiz_screen.JPG);
         }
-
     }
 }
 p{
