--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -1,11 +1,17 @@
 $background: #FFFFFF;
 $text_main: #1E1E1E;
 $text_class: #569CD6;
+$background_transparent: #1E1E1E7F;
 
+@mixin drop_btn{
+    padding: 0;
+    background: none;
+    cursor: pointer;
+    border:none;
+}
 
 @mixin set_button{
     height: 2em;
-    //width: 20%;
     padding-left:auto;
     padding-right:auto;
     color: $text_main;
@@ -45,7 +51,7 @@ body{
 .main_wrapper{
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-    grid-template-rows: 2rem 2.5rem 2rem 1fr 1fr;
+    grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr ;
 
     .head_content{
         grid-column: 2/7; 
@@ -61,20 +67,26 @@ body{
             }
 
             .settings{
-                cursor: pointer;
-
-                img{
-                    max-height: 1.4em;
-                    min-width: 1.4em;
-                }
                 
+                #settings_btn{
+                    @include drop_btn();
+
+                    img{
+                        max-height: 1.5rem;
+                        min-width: 1.5rem;
+                    }
+                }
+
+                #settings_btn:focus{
+                    @include btn_focus();
+                }             
+                                
                 .dropdown{
                     display: none;
                     margin-top: 0.5em;
                     position: absolute;
-                    //border: 1px solid $text_main;
                     z-index: 1;
-                    right: 10%;
+                    right: 9%;
                     background-color: $background;
 
                     .set_btn{
@@ -129,12 +141,6 @@ body{
                     }
                 }                
             }
-
-            .settings:hover .dropdown{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }
         }
     }
     #inner_content{
@@ -153,20 +159,25 @@ body{
 
             #menu_bar{
                 
-                cursor: pointer;
+                #mob_menu_btn{
+                    @include drop_btn();
 
-                img{
-                    max-height: 1.4em;
-                    min-width: 1.4em;
-                }
+                    img{
+                        max-height: 1.5rem;
+                        min-width: 1.5rem;
+                    }
+                }   
+                
+                #mob_menu_btn:focus{
+                    @include btn_focus();
+                }  
 
                 .dropdown{
                     display: none;
                     margin-top: 0.3em;
                     position: absolute;
-                    //border: 1px solid $text_main;
                     z-index: 1;
-                    right: 10%;
+                    right: 9%;
                     background-color: $background;
 
                     .mob_btn{
@@ -181,12 +192,7 @@ body{
                         @include btn_active()
                     }
                 }
-            }
-            #menu_bar:hover .dropdown{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }                
+            }               
         }
     }
 
@@ -196,9 +202,10 @@ body{
 
     #main_content{
         grid-column: 2/7; 
-        grid-row: 4;
+        grid-row: 5;
 
         p{
+            margin-top: 0;
             font-size: 0.85rem;
         }
 
@@ -214,21 +221,94 @@ body{
     #main_works{
         display: none;
         grid-column: 1/8; 
-        grid-row: 4;
+        grid-row: 4/6;
 
         .presentation{
+            display: none;
             position: absolute;
             width: 100%;
             height: 100%;
             background-position: center;
             background-repeat: no-repeat;
             background-size:cover;
+            grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
+            grid-template-rows: 2.5rem 1fr;
+            
+            .transparent{
+                grid-column: 1/8;
+                grid-row: 1/3;            
+                background-color: $background_transparent;            
+            }
+    
+            .pres_text{
+                display: block;
+                grid-column: 2/7;
+                grid-row: 2;     
+                
+                p{
+                    margin-top: 0;
+                    font-size: 0.85rem;
+                    color: #FFFFFF;
+                }
+            }
+        } 
+
+        #slide_control{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            width: 80vw;
+            left: 10%;
+            right: 10%;
+            margin-top: 0.5rem;
+            position: absolute;
+
+            button{
+                @include drop_btn();
+                font-size: 1rem;
+                color: $text_class;
+            }
+
+            button:focus{
+                @include btn_focus();
+            }
+            .dots{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+                width: 20%;
+
+                .dot{
+                    width: 0.3rem;
+                    height: 0.3rem;
+                    border-radius: 50%;
+                    border: 1px solid $text_class;
+                }
+
+                .dot_focus{
+                    width: 0.3rem;
+                    height: 0.3rem;
+                    border-radius: 50%;
+                    border: 1px solid $text_class;
+                    background-color: $text_class;
+                }
+            }
         }
+        
 
         #quiz{
             background-image: url(../img/quiz_screen.JPG);
         }
 
+        #old_portfolio{
+            background-image: url(../img/old_portfolio_screen.JPG);
+        }
+
+        #placeholder{
+            background-image: url(../img/placeholder_screen.JPG);
+        }
     }
 }
 p{
