--- a/css/styles.scss
+++ b/css/styles.scss
@@ -57,7 +57,7 @@ body{
 .main_wrapper{
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-    grid-template-rows: 2rem 2.5rem 2rem 1fr ;
+    grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr ;
 
     .head_content{
         grid-column: 2/7; 
@@ -208,9 +208,10 @@ body{
 
     #main_content{
         grid-column: 2/7; 
-        grid-row: 4;
+        grid-row: 5;
 
         p{
+            margin-top: 0;
             font-size: 0.85rem;
         }
 
@@ -226,35 +227,93 @@ body{
     #main_works{
         display: none;
         grid-column: 1/8; 
-        grid-row: 4;
+        grid-row: 4/6;
 
         .presentation{
+            display: none;
             position: absolute;
             width: 100%;
             height: 100%;
             background-position: center;
             background-repeat: no-repeat;
             background-size:cover;
-            
-        }
-
-        .transparent{
-            display: grid;
             grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-            grid-template-rows: 1rem 1fr;
-            background-color: $background_transparent;
-
+            grid-template-rows: 2.5rem 1fr;
+            
+            .transparent{
+                grid-column: 1/8;
+                grid-row: 1/3;            
+                background-color: $background_transparent;            
+            }
+    
             .pres_text{
                 display: block;
                 grid-column: 2/7;
-                grid-row: 2;            
+                grid-row: 2;     
+                
+                p{
+                    margin-top: 0;
+                    font-size: 0.85rem;
+                    color: #FFFFFF;
+                }
+            }
+        } 
+
+        #slide_control{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            width: 80vw;
+            left: 10%;
+            right: 10%;
+            margin-top: 0.5rem;
+            position: absolute;
+
+            button{
+                @include drop_btn();
+                font-size: 1rem;
+                color: $text_class;
+            }
+
+            button:focus{
+                @include btn_focus();
+            }
+            .dots{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+                width: 20%;
+
+                .dot{
+                    width: 0.3rem;
+                    height: 0.3rem;
+                    border-radius: 50%;
+                    border: 1px solid $text_class;
+                }
+
+                .dot_focus{
+                    width: 0.3rem;
+                    height: 0.3rem;
+                    border-radius: 50%;
+                    border: 1px solid $text_class;
+                    background-color: $text_class;
+                }
             }
         }
-
         
 
         #quiz{
             background-image: url(../img/quiz_screen.JPG);
+        }
+
+        #old_portfolio{
+            background-image: url(../img/old_portfolio_screen.JPG);
+        }
+
+        #placeholder{
+            background-image: url(../img/placeholder_screen.JPG);
         }
     }
 }
