--- a/css/styles.scss
+++ b/css/styles.scss
@@ -358,15 +358,28 @@ a{
 }
 
 @media screen and (min-width: 1008px){ 
+    body{
+        overflow: hidden;
+    }
     .main_wrapper{
+        display: grid;
+        grid-template-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
+        grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr ;
+
+        .head_content{
+            grid-column: 2/9; 
+            grid-row: 2;
+        }
 
         #inner_content{   
+            grid-column: 2;
+            grid-row: 4;
             
             #menu_div{
                 columns: 1;
                 display: flex;
                 flex-direction: column;
-                margin-top: 1.5em;
+                //margin-top: 1.5em;
         
                 .menu_btn{
                     @include remove_default_btn();
@@ -380,15 +393,46 @@ a{
                 .menu_btn:active{
                     @include btn_active();
                 }
-        
-                .menu_content{
-                    display: none;
-                }
             }
 
             #mob_menu{
                 display: none;
             }
-        }        
+        } 
+        
+        #main_content{
+            grid-column: 4/9;
+            grid-row: 4;
+
+            p{
+                font-size: 1em;
+            }
+        }
+
+        #main_works{
+            display: none;
+            grid-column: 1/10; 
+            grid-row: 3/6;
+
+            .presentation{
+                display: grid;
+                grid-template-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
+                z-index: -1;
+
+                .transparent{
+                    grid-column: 1/10;
+                }
+
+                .pres_text{
+                    grid-column: 4;
+
+                    p{
+                        font-size: 1em;
+                        background-color: $background;
+                        color: $text_main;
+                    }
+                }
+            }
+        }
     }    
 }
