--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -212,7 +212,8 @@ body{
 
         #main_animation{
             font-size: 16px;
-            width: 176px;
+            min-width: 176px;
+            max-width: 176px;
             color: $text_main;
             line-height: 16px;
             margin: auto;
