--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -327,6 +327,12 @@ body {
   color: #569CD6;
 }
 
+.main_wrapper #main_works #slide_control button:hover {
+  color: #FFFFFF;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
 .main_wrapper #main_works #slide_control button:focus {
   outline: none;
 }
