--- a/css/styles.scss
+++ b/css/styles.scss
@@ -61,6 +61,7 @@ body{
     grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr ;
 
     .head_content{
+        //Header including site title and settings menu
         grid-column: 2/7; 
         grid-row: 2;       
         
@@ -70,11 +71,13 @@ body{
             justify-content: space-between;
 
             .runner {
+                //Print out of the title
                 color: $text_main;
                 cursor: pointer;
             }
 
             .settings{
+                //Dropdown menu for settings
                 
                 #settings_btn{
                     @include drop_btn();
@@ -152,6 +155,7 @@ body{
         }
     }
     #inner_content{
+        //"sub-header"-row, containg title of currently selected section and content-menu
         grid-column: 2/7; 
         grid-row: 3;
 
@@ -205,10 +209,12 @@ body{
     }
 
     #menu_div{
+        //content-menu buttons for desktop, created with js
         display: none;
     }
 
     #main_content{
+        //main content part of the page
         grid-column: 2/7; 
         grid-row: 5;
 
@@ -236,11 +242,13 @@ body{
     }
 
     #main_works{
+        //container of portfolio-carousel
         display: none;
         grid-column: 1/8; 
         grid-row: 4/6;
 
         .presentation{
+            //container of a individual "case"
             display: none;
             position: absolute;
             width: 100%;
@@ -253,6 +261,7 @@ body{
             z-index: -2;         
             
             .transparent{
+                //transparent color-block to increase text visibility
                 grid-column: 1/8;
                 grid-row: 1/3;   
                 opacity: 0.6;  
@@ -261,6 +270,7 @@ body{
             }
     
             .pres_text{
+                //presentation text
                 display: block;
                 grid-column: 2/7;
                 grid-row: 2;  
@@ -274,6 +284,7 @@ body{
         } 
 
         #slide_control{
+            //buttons and navigation-dots for the carousel
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -289,11 +300,6 @@ body{
                 @include drop_btn();
                 font-size: 1rem;
                 color: $text_class;
-            }
-
-            button:hover{
-                color: #FFFFFF;
-                transition: 1s;
             }
 
             button:focus{
@@ -323,7 +329,7 @@ body{
             }
         }
         
-
+        //background-images for the different cases
         #quiz{
             background-image: url(../img/quiz_screen.JPG);
         }
@@ -348,6 +354,7 @@ a{
 }
 
 .fade{
+    //fade animation for transparent blocks in carousel
     animation-name: fade;
     animation-duration: 1.5s;
     -webkit-animation-name: fade;
@@ -396,7 +403,11 @@ a{
 
 @media screen and (min-width: 1008px){ 
     body{
-        overflow: hidden;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    body::-webkit-scrollbar{
+        display: none;
     }
     .main_wrapper{
         display: grid;
@@ -413,6 +424,7 @@ a{
             grid-row: 4;
             
             #menu_div{
+                //menu-buttons for desktop
                 columns: 1;
                 display: flex;
                 flex-direction: column;
@@ -496,6 +508,13 @@ a{
                     pointer-events: auto;
                     font-size: 2.5rem;
                 }
+
+                
+                button:hover{
+                    color: #FFFFFF;
+                    transition: 1s;
+                }
+                
                 .dots{
                     width: 10%;
                     align-self: flex-end;
