--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -46,6 +46,7 @@ $background_transparent: #1E1E1E7F;
     font-family: Consolas, monospace;
 }
 body{
+    overflow: hidden;
     margin: 0;
     background-color: $background;
 }
@@ -224,6 +225,10 @@ body{
             color: $text_main;
             line-height: 16px;
             margin: auto;
+        }
+
+        .desktop_animation_container{
+            display: none;
         }
 
         #main_about{
@@ -444,17 +449,40 @@ a{
         } 
         
         #main_content{
-            grid-column: 4;
+            grid-column: 4/9;
             grid-row: 4;
 
             p{
                 font-size: 1rem;
                 line-height: 1.2rem;
+                padding: 0 0 0 0.2rem;
+            }
+
+            .text_container{
+                display: grid;
+                grid-template-columns: 1fr 2rem 1fr 2rem 1fr;
+
+                .text_inner{
+                    grid-column: 1;
+                }
             }
 
             #main_animation{
-                margin:0;
+                display: none;
             }
+
+            #desktop_animation_container{
+                display:flex;
+                justify-content: space-between;
+
+                .main_animation_desktop{
+                    font-size: 16px;
+                    min-width: 176px;
+                    max-width: 200px;
+                    color: $text_main;
+                    line-height: 16px;
+                }
+            }            
         }
 
         #main_works{
